<resources>
    <string name="app_name">RoomGAN</string>

    <!-- Login -->
    <string name="username">Username</string>
    <string name="usernameError">Non-existent username</string>
    <string name="password">Password</string>
    <string name="incorrectPassword">Incorrect Password</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="createAccount">Create my Account</string>
    <string name="newPassword">New password sent to email</string>
    <string name="accountQuestion">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>

    <!-- Register -->
    <string name="mail">Mail</string>
    <string name="passwordConditions">Your password must match at least 3 of these conditions:</string>
    <string name="passwordSecurity">Password does not match at least 3 conditions</string>
    <string name="passwordDifferent">Passwords do not match</string>
    <string name="uppercase">At least one uppercase</string>
    <string name="lowercase">At least one lowercase</string>
    <string name="number">At least one number</string>
    <string name="specialCharacter">At least one special character</string>
    <string name="securityLevel">Security level:</string>
    <string name="veryHigh">Very high</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="verificationEmail">Verification email sent</string>
    <string name="usernameUsed">Username already exists</string>

    <!-- NAV -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawe_close">Close Drawer</string>

    <!-- Profile Fragment -->
    <string name="deleteAccount">Delete Account</string>
    <string name="changePassword">Change Password</string>
    <string name="currentPassword">Current Password</string>
    <string name="newProfilePassword">New password</string>
    <string name="updatePassword">Update Password</string>
    <string name="updatedPassword">Password updated successfully</string>
    <string name="alertDeleteMessage">Are you sure you want to delete this account?</string>
    <string name="wrongCurrentPassword">Current password is incorrect</string>

    <!-- Choose Image alert dialog -->
    <string name="chooseImageTitle">Choose an option</string>
    <string name="fromGallery">Choose from gallery</string>
    <string name="fromCamera">Take photo</string>
    <string name="cancel">Cancel</string>


    <!-- Home Fragment -->
    <string name="undo">Undo</string>
    <string name="measureDeleted">Measure deleted</string>

</resources>