<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_user_white"
            android:textSize="25sp"
            android:gravity="left"
            android:text=""
            android:textColor="@color/white"
            android:background="@drawable/login_edittext"/>

        <TextView
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_mail_white"
            android:textSize="25sp"
            android:gravity="left"
            android:text=""
            android:textColor="@color/white"
            android:background="@drawable/login_edittext"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/_2sdp"
                android:drawableLeft="@drawable/ic_delete_white"
                android:text="@string/deleteAccount"
                android:textColor="@color/white"
                android:backgroundTint="#8ddaeb"/>

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_2sdp"
                android:drawableLeft="@drawable/ic_lock_white"
                android:text="@string/changePassword"
                android:textColor="@color/white"
                android:backgroundTint="#db6060" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/changePasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/currentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_lock_white"
                android:drawableRight="@drawable/ic_visible_white"
                android:textSize="25sp"
                android:gravity="left"
                android:hint="@string/currentPassword"
                android:textColorHint="#73FFFFFF"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:background="@drawable/login_edittext"/>

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_lock_white"
                android:drawableRight="@drawable/ic_visible_white"
                android:textSize="25sp"
                android:gravity="left"
                android:hint="@string/newProfilePassword"
                android:textColorHint="#73FFFFFF"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:background="@drawable/login_edittext"/>

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_lock_white"
                android:drawableRight="@drawable/ic_visible_white"
                android:textSize="25sp"
                android:gravity="left"
                android:hint="@string/newProfilePassword"
                android:textColorHint="#73FFFFFF"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:background="@drawable/login_edittext"/>

            <TextView
                android:id="@+id/wrongPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:visibility="gone"
                android:text="@string/incorrectPassword"
                android:textSize="15sp"
                android:textColor="#F00"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_34sdp"
                android:text="@string/passwordConditions"
                android:textColor="#000000"
                android:textSize="@dimen/_14sdp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start">

                <CheckBox
                    android:id="@+id/uppercaseCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:clickable="false"
                    android:checked="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/uppercase"
                    android:id="@+id/uppercaseText"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start">

                <CheckBox
                    android:id="@+id/lowercaseCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:clickable="false"
                    android:checked="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lowercase"
                    android:id="@+id/lowercaseText"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start">

                <CheckBox
                    android:id="@+id/numberCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:clickable="false"
                    android:checked="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/number"
                    android:id="@+id/numberText"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start">

                <CheckBox
                    android:id="@+id/specialCharacterCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:clickable="false"
                    android:checked="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/specialCharacter"
                    android:id="@+id/specialCharacterText"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/updatePasswordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#db6060"
                android:text="@string/updatePassword"
                android:textColor="@color/white"
                android:onClick="updatePassword"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>