<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8ddaeb">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="RoomGAN">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        tools:context=".Login">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:src="@drawable/icon"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/login_edittext"
            android:drawableLeft="@drawable/ic_user_white"
            android:gravity="left"
            android:hint="@string/username"
            android:textColorHint="#73FFFFFF"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/login_edittext"
            android:drawableLeft="@drawable/ic_lock_white"
            android:drawableRight="@drawable/ic_visible_white"
            android:gravity="left"
            android:hint="@string/password"
            android:textColorHint="#73FFFFFF"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:visibility="gone"
            android:text=""
            android:textSize="15sp"
            android:textColor="#F00"
            />


        <Button
            android:id="@+id/enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:backgroundTint="#db6060"
            />

        <TextView
            android:id="@+id/recoverPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:onClick="recoverPassword"
            android:text="@string/forgotPassword"
            android:textColor="@color/white"
            android:textSize="@dimen/_9sdp"
            />

        <!--
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:textAllCaps="false"/>
            -->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/accountQuestion"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_4sdp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/signUp"
            android:textColor="#db6060"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:clickable="true"
            />

    </LinearLayout>

</LinearLayout>